[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MEFrpLib"
version = "3.1.0"
description = "ME Frp 5.0 Official Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MagicEdgeNet", email = "support@mefrp.com" }
]
keywords = ["mefrp", "frp", "sdk", "magicedge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typing-extensions>=4.0.0; python_version < '3.10'",
]

[project.optional-dependencies]
sync = ["requests>=2.25.0"]
async = ["aiohttp>=3.8.0"]
all = ["requests>=2.25.0", "aiohttp>=3.8.0"]
dev = ["ruff"]

[project.urls]
Homepage = "https://github.com/MagicEdgeNet/ME-Frp-v5-PythonSdk"
Documentation = "https://github.com/MagicEdgeNet/ME-Frp-v5-PythonSdk#readme"
Repository = "https://github.com/MagicEdgeNet/ME-Frp-v5-PythonSdk.git"
Issues = "https://github.com/MagicEdgeNet/ME-Frp-v5-PythonSdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["MEFrpLib"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501", # line too long (handled by formatter)
    "F403", # star imports
    "F405", # star imports
    "N815", # mixedCase in class scope (API compatibility)
    "N999", # Invalid module name (intentional)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
